# CMSIS-Stream-Nodes

./: .gitignore  AGENTS.md  README.md  requirements.txt
boards/: README.md
boards/cmsis/AlifE7/: hardware_params.h
boards/cmsis/default/: hardware_params.c  hardware_params.h
boards/cmsis/fvp_cs300/: Board.clayer.yml  clang_linker_script.ld.src  fvp_config.txt  hardware_params.c  hardware_params.h  vstream_audio_in_config.h
boards/cmsis/fvp_cs300/vsi/python/: arm_vsi0.py
boards/posix/Linux/: hardware_params.c
boards/posix/Mac/: hardware_params.c  hardware_params.h
boards/zephyr/fvp_cs300/: hardware_params.c  hardware_params.h
cmsis_runner/: CMSIS.cbuild-idx.yml  CMSIS.cbuild-pack.yml  CMSIS.csolution.yml
cmsis_runner/src/: .clangd  app_config.hpp  cmsis_runner.cproject.yml  stream_runtime_config.hpp
cmsis_runner/src/RTE/CMSIS/: IdentifiedNode.hpp  app_config.hpp  cstream_node.h  stream_init.cpp  stream_init.hpp  stream_runtime_config.hpp
cmsis_runner/src/RTE/_Debug_SSE-300-MPS3/: RTE_Components.h
examples/common/: app.py
examples/recorder/: CMakeLists.txt  README.md  create.py  main.cpp
examples/recorder/config/: app_config.hpp  stream_init.cpp  stream_init.hpp
examples/recorder/python/: create.py
examples/recorder/recorder_graph/: AppNodes_recorder.hpp  recorder.dot  recorder_params.c  recorder_params.h  scheduler_recorder.cpp  scheduler_recorder.h
nodes/: README.md  __init__.py
nodes/generic/: BufferSink.py  BufferSource.py  DebugSink.py  DebugSource.py  __init__.py
nodes/posix/: FileSink.py  FileSource.py  MicrophoneSource.py  WavSink.py  WavSource.py  __init__.py
posix_runner/: CMakeLists.txt  CMakePresets.json  app_config.hpp  stream_runtime_config.hpp
posix_runner/app_graph/: app_params.c  app_params.h  scheduler_app.h
posix_runner/config/: IdentifiedNode.hpp  app_config.hpp  stream_init.cpp  stream_init.hpp
runner_common/: CMakeLists.txt  README.md  datatypes.h
runner_common/app_graph/: AppNodes.hpp  app.dot  app_params.c  app_params.h  board_config.cmake  scheduler_app.cpp
runner_common/app_graph/json/: scheduler_app_selectors_inits.json
runner_common/config/: cstream_node.h  stream_init.cpp  stream_init.hpp
src/cmsis/: MicrophoneSource.hpp
src/csrc/tinywav/: tinywav.c
src/generic/: BufferSink.hpp  BufferSource.hpp  DebugSink.hpp  DebugSource.hpp
src/posix/: FileSink.hpp  FileSource.hpp  MicrophoneSource.hpp  WavSink.hpp  WavSource.hpp
zephyr_runner/: .clangd  CMakeLists.txt  Zephyr.cbuild-idx.yml  Zephyr.cbuild-pack.yml  Zephyr.csolution.yml  app_config.hpp  main.cpp
